<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/emptyViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyleSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/frame_load_tips"
            android:textColor="#333333"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyViewNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_119"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/dp_95"
            android:layout_height="@dimen/dp_62"
            android:scaleType="fitXY"
            android:src="@drawable/ic_frame_no_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_22"
            android:text="@string/frame_no_data"
            android:textColor="#333333"
            android:textSize="@dimen/dp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyViewLoadFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_119"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/dp_88"
            android:layout_height="@dimen/dp_114"
            android:scaleType="fitXY"
            android:src="@drawable/ic_frame_load_failed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_22"
            android:text="@string/frame_load_failed"
            android:textColor="#333333"
            android:textSize="@dimen/dp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/frame_load_failed_tips"
            android:textColor="#999999"
            android:textSize="@dimen/dp_14"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyViewNetworkUnavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_119"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_frame_network_unavailable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/frame_net_error"
            android:textColor="#333333"
            android:textSize="@dimen/dp_16" />

    </LinearLayout>

</merge>
